20100218 (T.S.)
 - BUGFIX: src/drvPadUdpComm.c: padUdpCommInit() must call io.open() only
   *after* installing vmeUdpComm IO methods.
20100208 (T.S.)
 - src/udpComm.h, src/udpCommBSD.c: Let udpCommConnect() treat broadcast
   peer addresses the same as multicast peers (BSD semantics also reject
   any incoming traffic if peer is a BC address). Documented this change
   in udpComm.h (and README).
20100208 (T.S.)
 - src/padStream.h, src/padStream.c:
    o Introduced typedef for stream 'getdata' routine.
    o Made padStreamSim_getdata a global function pointer variable
      (defaults to padStreamSim_iir2_getdata) so that users could
      install their own simulation 'getdata' routine.
20100208 (T.S.)
 - src/padProtoHost.c: Use PADREQ_BCST macro instead of hardcoding -128.
20100208 (T.S.)
 - src/padProto.c: let padProtoHandler() ignore requests with
   a command array too small to hold data for the active ('this')
   channel.
20100202 (T.S.)
 - src/udpComm.c: udpCommReturnPacket() failed to set length
   in UDP and IP header. This must be done before reflecting
   the headers so that the IP header checksum is computed
   correctly.
20100125 (T.S.)
 - removed typedef of BpmNumber (-> Bpm app)
 - public declaration of drvPadUdpCommChannelsInUseMask (used
   by Bpm FCOM source).
20100122 (T.S.)
 - configure/CONFIG: only include CONFIG_SITE if present.
20100122 (T.S.)
 - src/drvPadUdpComm.c: replaced strdup() by epicsStrDup().
20100122 (T.S.)
 - src/fidProcess.c: forgot to #define E_MOD1 and E_MOD5.
   Removed unused variable.
20100122 (T.S.)
 - src/padProto.h, src/padProto.c, src/drvPadUdpComm.c,
   src/padProtoHost.c, src/hostStream.c, src/padStream.c:

   **************************************************
   PROTOCOL VERSION CHANGE: PadReply layout modified:
   **************************************************
    - reduced size of 'status' to 8-bits
    - increased timestampHi -> 32-bits
20100122 (T.S.)
 - src/drvPadUdpComm.c: